@@ -74,6 +74,13 @@ PUBLIC CONST AS INTEGER ERR_PAINT             = 110
 PUBLIC CONST AS INTEGER ERR_LINE              = 111
 PUBLIC CONST AS INTEGER ERR_PSET              = 112
 PUBLIC CONST AS INTEGER ERR_INPUT_OUT_OF_DATA = 113
+PUBLIC CONST AS INTEGER AE_ON_TIMER_CALL      = 114
+PUBLIC CONST AS INTEGER AE_TIMER_ON           = 115
+PUBLIC CONST AS INTEGER AE_TIMER_OFF          = 116
+PUBLIC CONST AS INTEGER AE_OPEN               = 117
+PUBLIC CONST AS INTEGER AE_OUTPUT             = 118
+PUBLIC CONST AS INTEGER AE_CLOSE              = 119
+PUBLIC CONST AS INTEGER AE_MOUSE              = 120
 
 ' screen modes
 
@@ -109,6 +116,10 @@ PUBLIC DECLARE SUB WINDOW CLOSE   (BYVAL id AS INTEGER = 0)
 PUBLIC DECLARE SUB WINDOW OUTPUT  (BYVAL id AS INTEGER = 0)
 PUBLIC DECLARE SUB ON WINDOW CALL (BYVAL p AS SUB)
 PUBLIC DECLARE FUNCTION WINDOW    (BYVAL n AS INTEGER) AS ULONG
+PUBLIC DECLARE SUB MOUSE ON
+PUBLIC DECLARE SUB MOUSE OFF
+PUBLIC DECLARE SUB ON MOUSE CALL  (BYVAL p AS SUB)
+PUBLIC DECLARE FUNCTION MOUSE     (BYVAL n AS INTEGER) AS INTEGER
 PUBLIC DECLARE SUB SLEEP
 PUBLIC DECLARE SUB SLEEP FOR      (BYVAL s AS SINGLE)
 
